Fix: Map - Tools box tooltip getting overlapped by the header

--- a/app/assets/stylesheets/modules/map/_module-tabs.scss
+++ b/app/assets/stylesheets/modules/map/_module-tabs.scss
@@ -12,7 +12,7 @@ $w-control: 44px;
   @media (min-width: $br-mobileMap){
     position: absolute;
     background: $white;
-    top: 110px;
+    top: 112px;
     left: auto;
     right: 35px;
     width: 283px;
